// Copyright (C) 2020 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "storj.io/common/pb";

import "gogo.proto";
import "google/protobuf/timestamp.proto";

package heldamount;

service HeldAmount {
    rpc GetPayStub(GetHeldAmountRequest) returns (GetHeldAmountResponse);
    rpc GetAllPaystubs(GetAllPaystubsRequest) returns (GetAllPaystubsResponse);
    rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
    rpc GetAllPayments(GetAllPaymentsRequest) returns (GetAllPaymentsResponse);
}

message GetHeldAmountRequest {
    google.protobuf.Timestamp period = 1 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message GetHeldAmountResponse {
    google.protobuf.Timestamp period = 1 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    bytes node_id = 2 [(gogoproto.customtype) = "NodeID", (gogoproto.nullable) = false];
    google.protobuf.Timestamp created_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    string  codes = 4;
    double  usage_at_rest = 5;
    int64   usage_get = 6;
    int64   usage_put = 7;
    int64   usage_get_repair = 8;
    int64   usage_put_repair = 9;
    int64   usage_get_audit = 10;
    int64   comp_at_rest = 11;
    int64   comp_get = 12;
    int64   comp_put = 13;
    int64   comp_get_repair = 14;
    int64   comp_put_repair = 15;
    int64   comp_get_audit = 16;
    int64   surge_percent = 17;
    int64   held = 18;
    int64   owed = 19;
    int64   disposed = 20;
    int64   paid = 21;
    int64   distributed = 22;
}

message GetAllPaystubsRequest {}

message GetAllPaystubsResponse {
    repeated GetHeldAmountResponse paystub = 1;
}

message GetPaymentRequest {
    google.protobuf.Timestamp period = 1 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message GetPaymentResponse {
    bytes node_id = 1 [(gogoproto.customtype) = "NodeID", (gogoproto.nullable) = false];
    google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    google.protobuf.Timestamp period = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    int64 amount = 4;
    string receipt = 5;
    string notes = 6;
    int64 id = 7;
}

message GetAllPaymentsRequest {}

message GetAllPaymentsResponse {
    repeated GetPaymentResponse payment = 1;
}
